--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	background-image: "assets/bg.svg";
 	box-sizing: border-box;
 
 	-moz-text-size-adjust: 100%;
@@ -26,19 +25,25 @@ body {
 h1 {
 	text-align: center;
 	margin-top: 5em;
-	margin-bottom: 3em;
+	margin-bottom: 6em;
 }
 
 
 
 .btn {
 	font-weight: bold;
-	color: #333;
 	text-decoration: none;
 	padding: 0em 0em;
 	margin: 0 1em;
 	display; inline-block;
 	position: center;
-	font-size: 4em;
+	font-size: 8em;
+	color: #f9f9f9;
 }
 
+.btn:hover,
+.btn:active,
+.btn:focus {
+	color: transparent;
+	color: #333;
+}
