--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -11,7 +11,7 @@ html {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
-	font-family: helvetica;
+	font-family: $helvetica;
 }
 
 *, *:before, *:after {
@@ -35,15 +35,15 @@ h1 {
 	text-decoration: none;
 	padding: 0em 0em;
 	margin: 0 1em;
-	display; inline-block;
+	display: inline-block;
 	position: center;
 	font-size: 8em;
-	color: #f9f9f9;
+	color: darken($white, 5%);
 }
 
 .btn:hover,
 .btn:active,
 .btn:focus {
 	color: transparent;
-	color: #333;
+	color: darken($white, 60%);
 }
